--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
     <!-- Copyright End -->
 
     <!-- Back to Top Button -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top back-to-top-icon>
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top back-to-top-icon">
         <i class="bi bi-arrow-up"></i>
     </a>
 
