--- a/ornaments.html
+++ b/ornaments.html
@@ -359,12 +359,12 @@
     <!-- Copyright End -->
 
     <!-- Back to Top Button -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="position: fixed; bottom: 77px; right: 15px; z-index: 99;">
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top back-to-top-icon">
         <i class="bi bi-arrow-up"></i>
     </a>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle" style="position: fixed; bottom: 130px; right: 15px; z-index: 1001;">
+    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle back-to-top-whatsapp" >
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
