--- a/shop.html
+++ b/shop.html
@@ -270,7 +270,7 @@
     </a>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle" style="position: fixed; bottom: 130px; right: 15px; z-index: 1001;">
+    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle back-to-top-whatsapp">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
