--- a/about.html
+++ b/about.html
@@ -46,22 +46,16 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" style="display: block;" data-wow-delay="0.1s">
 
-        <!-- <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary">Photozone</h1>
-        </a>
-        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button> -->
+        <div class="d-flex align-items-center justify-content-between w-100">
+            <a href="index.html" class="navbar-brand d-flex align-items-center">
+                <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
+                <h1 class="text-primary ms-2" style="font-size: 1.50rem;">Diamond Bridal</h1>
+            </a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
 
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
-        </a>
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary small-device">DIAMOND DRIDAL</h1>
-        </a>
-        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
             <div class="small-device-responsive">
                 <a href="index.html" >
