--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button> -->
-        <div class="d-flex align-items-center justify-content-between w-100">
-            <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <div class="d-flex align-items-center justify-content-between w-100 d-lg-none">
+            <a href="index.html" class="navbar-brand d-flex d-lg-none align-items-center">
                 <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
                 <h1 class="text-primary ms-2" style="font-size: 1.50rem;">Diamond Bridal</h1>
             </a>
