--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" style="display: block;" data-wow-delay="0.1s">
 
-        <div class="d-flex align-items-center justify-content-between w-100">
+        <div class="d-flex align-items-center justify-content-between w-100 d-lg-none">
           <a href="index.html" class="navbar-brand d-flex align-items-center">
               <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
               <h1 class="text-primary ms-2" style="font-size: 1.50rem;">Diamond Bridal</h1>
